feat: course data converter

--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -27,7 +27,7 @@
                 <input id="course-selector" type="" placeholder="Type in course code">
             </div>
             <div>
-                <ul id="course-list-view"></ul>
+                <div id="course-list-view"></div>
             </div>
         </div>
         <div id="resize-handle"></div>
