--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -70,8 +70,6 @@ body {
 
 }
 
-#filtered-course-list {
-    position: absolute;
-    z-index: 2;
-    text-align: left;
+.course-view {
+    background: rgba(0,0,0,.25);
 }
