--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -119,9 +119,20 @@ td {
     width: auto;
     border-bottom: 1px solid #eee;
     border-right: 1px solid #eee;
-    padding: 0.25rem 0.25rem 0 0.25rem;
+    padding: 0.25em 0.25em 0 0.25em;
 }
 
 td:last-child {
     border-right: none;
+}
+
+.event {
+    background: rgba(80, 80, 80, 1);
+    color: #fff;
+    text-align: left;
+    font-size: 0.9em;
+    z-index: 10;
+    padding: 0.5em;
+    overflow-x: hidden;
+    border-radius: 2px;
 }
