--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="section sidebar">
             <div class="textbox">
-                <div class="text text-s">Current semester: {{ name }}</div>
+                <div>Current semester: {{ name }}</div>
             </div>
             <div class="schedule-select">
                 <select id="schedule-selector" type="text">
@@ -387,7 +387,7 @@
                             <td></td>
                             <td></td>
                         </tr>
-                        <tr>
+                        <tr class="timetable-last">
                             <td class="timetable-time"></td>
                             <td></td>
                             <td></td>
